projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/Metadata_Scan_Job__c.object-meta.xml
<CustomObject>
    <description>Tracks one metadata dependency scan. Created when a user submits a scan request. Holds all configuration (target component, scan options), runtime state (status, progress counter), results (summary, plain-English description), and error detail. Records are automatically deleted after the configured retention period by the cleanup batch. Do not delete records manually while Status is Initializing or Processing.</description>
    <label>Metadata Scan Job</label>
    <nameField>
        <displayFormat>MSJ-{0000}</displayFormat>
        <label>Metadata Scan Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Scan Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>