projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Active_Flows_Only__c.field-meta.xml
<CustomField>
    <fullName>Active_Flows_Only__c</fullName>
    <description>When checked, inactive and deprecated Flow versions are excluded from scan results. Reduces scan scope and processing time. Default: true. Unchecking this includes all Flow versions, including inactive ones, and may significantly increase scan duration.</description>
    <defaultValue>true</defaultValue>
    <label>Active Flows Only</label>
    <type>Checkbox</type>
</CustomField>