projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Batch_Size_Override__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_Override__c</fullName>
    <description>Job-specific Batch Size Override set by resumeJob() when the user resumes after a scan pause. The engine uses this value instead of the CMDT Scan_Batch_Size__c for the duration of this job. Persists across Queueable self-chain boundaries. Null during normal execution. Do not edit manually during an active scan.</description>
    <label>Analysis Speed Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>