projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Component_Type_Counts__c.field-meta.xml
<CustomField>
    <fullName>Component_Type_Counts__c</fullName>
    <description>Count of discovered components per metadata type, populated when Status = Completed. Stored as versioned JSON (root 'v' key, e.g. {v:1, ApexClass:5, Flow:3}). Used to build the stats tile and plain-English summary. Populated by the engine only — do not edit manually.</description>
    <label>Component Counts by Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>