projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Components_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Components_Analyzed__c</fullName>
    <description
  >Running count of metadata components discovered so far. Updated after each processing cycle. Used to drive the progress bar in the UI. Do not edit manually.</description>
    <defaultValue>0</defaultValue>
    <label>Components Analyzed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>