projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Error_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Status_Message__c</fullName>
    <description>Full technical error detail when Status is Failed, plus diagnostic notices (e.g. Platform Event suppression warnings). Visible to admins via the scan results screen. Populated by the scan engine only. Ref: ISP-6072</description>
    <label>Error / Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>