projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Is_Platform_Events_Auto_Suppressed__c.field-meta.xml
<CustomField>
    <fullName>Is_Platform_Events_Auto_Suppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true synchronously by the engine when Platform Event auto-suppression fires during an execution (org daily PE delivery >80% consumed). Allows getJobStatus() to return peSuppressionActive: true immediately, without waiting for the async CMDT Is_Platform_Events_Disabled__c write to commit. Cleared on subsequent job starts. Do not edit manually.</description>
    <label>Is Platform Events Auto-Suppressed</label>
    <type>Checkbox</type>
</CustomField>