projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Distinguishes the type of scan job. Dependency_Map = structural metadata dependency traversal (current engine). Text_Search = reserved for future content-based metadata search feature. Defaults to Dependency_Map on all existing and new jobs.</description>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependency_Map</fullName>
                <default>true</default>
                <label>Dependency Map</label>
            </value>
            <value>
                <fullName>Text_Search</fullName>
                <isActive>false</isActive>
                <label>Text Search</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>