projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Last_Query_Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Query_Row_Count__c</fullName>
    <description>Number of rows returned by the most recent Tooling API callout. Updated after each callout. Used by the guardrail: if the previous callout returned 1900 or more rows, QueryMore is likely for the next batch. Initialized to 0 on job creation. Do not edit manually.</description>
    <defaultValue>0</defaultValue>
    <label>Last Result Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>