projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Last_Successful_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Cycle__c</fullName>
    <description>The value of Total_Processing_Cycles__c at the last execution that made measurable progress (Components_Analyzed__c increased). Reset to Total_Processing_Cycles__c whenever Components_Analyzed__c increases. Stall condition: Total_Processing_Cycles__c - Last_Successful_Cycle__c >= Stall_Detection_Threshold__c. Persisted on the job record so it survives across Queueable self-chain boundaries. Do not edit manually. Ref: ISP-6072</description>
    <defaultValue>0</defaultValue>
    <label>Last Successful Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>