projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pause_Reason__c</fullName>
    <description>Machine-readable reason the scan was paused. Allows the LWC to display the correct banner message without parsing Scan_Diagnostic_Log__c. NodeCapReached = scan hit Max_Components__c limit. StallDetected = engine detected repeated cycles with no new nodes found. Set by the engine only when transitioning Status to Paused. Null for non-Paused jobs. Do not edit manually.</description>
    <label>Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NodeCapReached</fullName>
                <label>Node Cap Reached</label>
            </value>
            <value>
                <fullName>StallDetected</fullName>
                <label>Stall Detected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>