projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/PE_Suppressed_This_Execution__c.field-meta.xml
<CustomField>
    <fullName>PE_Suppressed_This_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true synchronously by the engine when Platform Event auto-suppression fires during an execution (org daily PE delivery >80% consumed). Allows getJobStatus() to return peSuppressionActive: true immediately, without waiting for the async CMDT Disable_Platform_Events__c write to commit. Cleared on subsequent job starts. Do not edit manually.</description>
    <label>PE Suppressed This Execution</label>
    <type>Checkbox</type>
</CustomField>