projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Result_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Result_File_Id__c</fullName>
    <description
  >The ID of the Salesforce File (ContentDocument) that stores the complete scan result as JSON. Populated after the scan completes and all Metadata_Dependency__c records have been serialized and deleted. The app uses this pointer to load results for completed jobs without querying the deleted node records. Null for active, failed, or cancelled scans. Do not edit manually.</description>
    <label>Result File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>