projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Result_Save_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Result_Save_Attempted__c</fullName>
    <description>Set to true at the start of ScanResultFileQueueable.execute(), before any DML, so it is committed outside the savepoint scope. Allows the LWC to distinguish a serializer failure (traversal completed but saving failed) from a mid-traversal engine failure - both result in Status = Failed with no Result_File_Id__c, but only the serializer path has this flag set. When true and Result_File_Id__c is null, the LWC shows the "Download Partial Results" option. Do not edit manually.</description>
    <defaultValue>false</defaultValue>
    <label>Result Export Attempted</label>
    <type>Checkbox</type>
</CustomField>