projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Result_Summary__c</fullName>
    <description>JSON object mapping each metadata type to the count of components found (e.g. {"v": 1, "ApexClass": 5, "Flow": 3}). Populated only when Status = Completed. Used to build the stats tile and plain-English summary. Do not edit manually. Ref: ISP-6072</description>
    <label>Result Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>