projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Scan_Diagnostic_Log__c.field-meta.xml
<CustomField>
    <fullName>Scan_Diagnostic_Log__c</fullName>
    <description>Full technical error detail when Status is Failed, plus diagnostic notices (e.g. Platform Event suppression warnings). Visible to admins via the scan results screen. Populated by the scan engine only.</description>
    <label>Diagnostic Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>