projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Scan_Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Scan_Summary_Text__c</fullName>
    <description>Plain-English summary of scan results, generated after the scan completes by ScanSummaryQueueable (e.g. "This scan found 42 dependencies: 5 Apex classes, 3 active Flows"). Displayed in the Scan Summary card. Populated asynchronously after Status = Completed - may appear a few seconds after the scan finishes. Null for Failed, Cancelled, and Paused jobs.</description>
    <label>Scan Summary Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>