projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current state of the scan. Initializing = being set up. Processing = scan running. Paused = engine detected a stall or node cap reached. Completed = scan finished successfully. Failed = unrecoverable error. Cancelled = stopped by user. Do not manually set this field.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initializing</fullName>
                <default>true</default>
                <label>Initializing</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>