projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Status_Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Status_Closed_At__c</fullName>
    <description
  >Timestamp set the moment Status transitions to Completed, Failed, or Cancelled. Used by the cleanup batch to calculate retention age. Never set for jobs that are still running or Paused. The cleanup batch uses this field, not CreatedDate, to avoid deleting in-progress scans. Do not edit manually.</description>
    <label>Status Closed At</label>
    <type>DateTime</type>
</CustomField>