projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Target_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_API_Name__c</fullName>
    <description>The developer/API name of the metadata component to scan (e.g. Account.My_Field__c). Must match the exact API name as it appears in Salesforce Setup. Required.</description>
    <label>Component API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>