projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Target_Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Metadata_Type__c</fullName>
    <description
  >The type of metadata component being scanned (e.g. CustomField, Flow, ApexClass). Determines which supplemental query handlers run and which batch size setting applies. Required. Cannot be changed after the job starts.</description>
    <label>Component Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>CustomField</fullName>
                <label>Custom Field</label>
            </value>
            <value>
                <fullName>CustomObject</fullName>
                <label>Custom Object</label>
            </value>
            <value>
                <fullName>FlexiPage</fullName>
                <label>Lightning Page</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
                <label>Validation Rule</label>
            </value>
            <value>
                <fullName>WorkflowRule</fullName>
                <label>Workflow Rule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>