projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Target_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Parent_Object__c</fullName>
    <description
  >The API name of the parent object, required when Target_Metadata_Type__c is CustomField. Used to scope the Tooling API query to a specific object. Optional for all other metadata types.</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>