projects/meta-mapper/force-app/main/default/objects/Metadata_Scan_Job__c/fields/Total_Processing_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Total_Processing_Cycles__c</fullName>
    <description>Number of times the async engine has processed a batch for this scan. Incremented on every Queueable execution. Compared against Last_Successful_Cycle__c to detect stall loops. Do not edit manually. Ref: ISP-6072</description>
    <defaultValue>0</defaultValue>
    <label>Total Processing Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>